--- a/hyprland.conf
+++ b/hyprland.conf
@@ -201,7 +201,8 @@ bind = $mainMod, A, exec, $menu
 bind = $mainMod, J, togglesplit, # dwindle
 bind = , XF86MonBrightnessUp, exec, brightnessctl s +5%
 bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
-
+# Screenshot a region
+bind = $mainMod, P, exec, hyprshot -m region
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
