--- a/hyprland.conf
+++ b/hyprland.conf
@@ -203,6 +203,8 @@ bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
 # Screenshot a region
 bind = $mainMod, P, exec, hyprshot -m region
 
+bind = $mainMod, D, exec, /home/nik/Hiddify-Linux-x64.AppImage
+
 binde =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%+
 binde =, XF86AudioLowerVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%-
 bind =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
