--- a/hyprland.conf
+++ b/hyprland.conf
@@ -204,6 +204,8 @@ bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
 bind = $mainMod, P, exec, hyprshot -m region
 
 bind = $mainMod, D, exec, /home/nik/Hiddify-Linux-x64.AppImage
+bind = $mainMod, F, exec, firefox
+bind = $mainMod, T, exec, telegram-desktop
 
 binde =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%+
 binde =, XF86AudioLowerVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%-
